# study-AID-backend

./: .env.example  .gitattributes  .gitignore  CODEOWNERS  Dockerfile.local  Dockerfile.prod  Makefile  README.md  build.gradle  docker-compose.yml  gradle.properties  watch-and-reload.sh
.github/: pull_request_template.md
.github/workflows/: deploy-api-server-dev.yml  deploy-backend-dev.yml  deploy-generate-course-weakness-analysis-dev.yml  deploy-generate-exam-dev.yml  deploy-generate-exam-prod.yml  deploy-generate-quiz-dev.yml  deploy-generate-quiz-prod.yml  deploy-grade-exam-essay-dev.yml  deploy-grade-quiz-essay-dev.yml  deploy-summarize-lecture-dev.yml  deploy-summarize-lecture-prod.yml  migration-dev.yml  migration-prod.yml  test.yml
flyway/: flyway-local.conf
flyway/migrations/: V10__add_partially_graded_status_to_quiz_table.sql  V11__add_partially_graded_status_to_exam_table.sql  V12__add_references_to_qna_chat_messages.sql  V13__add_essay_criteria_analysis_to_quiz_and_exam_responses.sql  V13__add_essay_criteria_analysis_to_quiz_response_table.sql  V14__make_qna_chat_unique.sql  V15__replace_feedback_with_course_weakness_analysis.sql  (+14 more)
jobs/: README.md
jobs/summarize_lecture/: Dockerfile  README.md  handler.py  openai_client.py  parsed_text_models.py  pdf_chunker.py  pyproject.toml  requirements.txt  summary_models.py  test.py
langchain/: .dockerignore  Dockerfile  app.py  dockerfile  langchain_server.py  requirements.txt  test_langchain_server.py
schema/: init_schema.sql
scripts/: init-localstack.sh  localstack-init.sh  make-executable.sh
(+485 files in other folders)
